# ChangeLog for kde-misc/filelight
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.6 2004/11/30 19:21:10 carlo Exp $

*filelight-1.0_beta6 (30 Nov 2004)

  30 Nov 2004; Carsten Lohrke <carlo@gentoo.org>
  +files/filelight-1.0_beta6-pic.patch, +filelight-1.0_beta6.ebuild:
  version bump

*filelight-1.0_beta5 (21 Nov 2004)

  21 Nov 2004; Dominik Stadler <centic@gentoo.org>
  +filelight-1.0_beta5.ebuild:
  Add new Version 1.0beta5

*filelight-1.0_beta4 (10 Nov 2004)

  10 Nov 2004; Carsten Lohrke <carlo@gentoo.org> -filelight-0.6.4.1.ebuild,
  -filelight-1.0_beta1.ebuild, -filelight-1.0_beta2-r1.ebuild,
  -filelight-1.0_beta2-r2.ebuild, -filelight-1.0_beta2.ebuild,
  +filelight-1.0_beta4.ebuild:
  version bump and clean up

  04 Nov 2004; Jason Wever <weeve@gentoo.org> filelight-1.0_beta2-r2.ebuild:
  Added ~sparc keyword.

*filelight-0.6.4.1 (30 Oct 2004)

  30 Oct 2004; Carsten Lohrke <carlo@gentoo.org> +metadata.xml,
  +filelight-0.6.4.1-r1.ebuild, +filelight-0.6.4.1.ebuild,
  +filelight-1.0_beta1.ebuild, +filelight-1.0_beta2-r1.ebuild,
  +filelight-1.0_beta2-r2.ebuild, +filelight-1.0_beta2.ebuild:
  Moved from sys-apps/filelight to kde-misc/filelight.

*filelight-1.0_beta2-r2 (30 Aug 2004)

  30 Aug 2004; Guy Martin <gmsoft@gentoo.org> +filelight-1.0_beta2-r2.ebuild:
  Unconditionally use -fPIC for libs (#55238). Marked ~hppa.

  11 Jul 2004; Carsten Lohrke <carlo@gentoo.org> filelight-0.6.4.1-r1.ebuild:
  stable on x86

*filelight-1.0_beta2-r1 (01 Jul 2004)

  01 Jul 2004; Carsten Lohrke <carlo@gentoo.org>
  +filelight-1.0_beta2-r1.ebuild:
  -fPIC for amd64

*filelight-1.0_beta2 (30 Jun 2004)

  30 Jun 2004; Carsten Lohrke <carlo@gentoo.org> +filelight-1.0_beta2.ebuild:
  version bump

  28 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org>
  filelight-0.6.4.1.ebuild:
  kde-base is deprecated

*filelight-1.0_beta1 (12 Jun 2004)
