@@ -1,6 +1,9 @@
 # ChangeLog for kde-misc/filelight
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.6 2004/11/30 19:21:10 carlo Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.7 2005/01/21 17:25:49 carlo Exp $
+
+  21 Jan 2005; Carsten Lohrke <carlo@gentoo.org> filelight-1.0_beta6.ebuild:
+  stable on x86
 
 *filelight-1.0_beta6 (30 Nov 2004)
 
